fixes covers.

--- a/src/app/pages/brand/spotlight/spotlight.component.scss
+++ b/src/app/pages/brand/spotlight/spotlight.component.scss
@@ -8,20 +8,20 @@
   .tabs {
     ul {
       li {
-          border-top: 0.5px solid $light_gray_8;
-          border-bottom: 0.5px solid $light_gray_8;
-        span{
+        border-top: 0.5px solid $light_gray_8;
+        border-bottom: 0.5px solid $light_gray_8;
+        span {
           font-family: $proxiBold;
           color: $light_gray_8;
           &.active,
           &:hover {
             color: $red;
-          } 
+          }
         }
       }
     }
   }
   .article {
-    padding: 0 58px;
+    padding: 0 59px;
   }
 }
