--- a/src/app/pages/monthly-covers/monthly-covers.component.scss
+++ b/src/app/pages/monthly-covers/monthly-covers.component.scss
@@ -96,7 +96,7 @@
     }
     .c-card-box--contentGroup {
       font-family: $roboto;
-      .fa {
+      .arrow {
         color: $red;
         font-size: 20px;
       }
